fix(style): fix the scrollbar squashing and set the minimum height as screen height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
 @layer base {
   :root {
     font-family: "Noto Serif SC", serif, "Noto Sans SC", sans-serif;
+    overflow-y: scroll;
   }
 
   svg[id^="mermaid-"] {
